--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,15 +8,18 @@
 h5{
   font-family: 'Architects Daughter', cursive;
 }
-h2, h5{
+h1, h2, h5{
   text-align:center;
-  margin:0px;
-  color:755625;
   
+  color:755625;
+}
+.name{
+  font-family: 'Poiret One', cursive;
+  font-weight:bold;
 }
 .carousel-item{
-  height:200px;
-  width:200px
+  height:600px!important;
+  width:600px!important;
 }
 .parallax{
 height:200px;
@@ -31,5 +34,5 @@ height:200px;
   text-align:center;
 }
 .carousel{
-  height:300px;
+  height:500px;
 }
