--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,6 +60,11 @@ height:200px;
 .contacts{
   text-decoration:none;
 }
+footer{
+  text-align:center;
+  font-size: 30px;
+  font-family: 'Architects Daughter', cursive;
+}
 
 @media screen and (max-width:1025px){
   .carousel-item{
