--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,114 +1,139 @@
-.nav-bar{
+.nav-bar {
   background-color: #ece5e5;
   color: #755625;
 }
-.right{
+
+.right {
   color: #755625;
 }
-h4, h5{
+
+h4,
+h5 {
   font-family: 'Architects Daughter', cursive;
 }
-h1, h2, h5{
-  text-align:center;
-  
-  color:755625;
+
+h1,
+h2,
+h5 {
+  text-align: center;
+
+  color: 755625;
 }
-.name{
+
+.name {
   font-family: 'Poiret One', cursive;
-  font-weight:bold;
+  font-weight: bold;
 }
-.nav-list{
-  font-size:20px!important;
+
+.nav-list {
+  font-size: 20px !important;
 }
-.carousel-item{
-  height:600px!important;
-  width:600px!important;
+
+.carousel-item {
+  height: 600px !important;
+  width: 600px !important;
 }
-.card-title{
-  font-size:30px!important;
-  font-weight:bold!important;
+
+.card-title {
+  font-size: 30px !important;
+  font-weight: bold !important;
 }
-.hello{
-  font-size:18px;
+
+.hello {
+  font-size: 18px;
 }
-.parallax{
-height:200px;
+
+.parallax {
+  height: 200px;
 }
-.parallax-container{
-  height:300px;
+
+.parallax-container {
+  height: 300px;
 }
-.hello{
-  text-align:center;
+
+.hello {
+  text-align: center;
 }
-.centered{
-  text-align:center;
-  margin:auto;
+
+.centered {
+  text-align: center;
+  margin: auto;
 }
-.carousel{
-  height:500px;
+
+.carousel {
+  height: 500px;
 }
-#me{
-  max-height:400px;
-  max-width:400px;
-  border-radius:20px;
-  float:left;
-  margin:40px;
+
+#me {
+  max-height: 400px;
+  max-width: 400px;
+  border-radius: 20px;
+  float: left;
+  margin: 40px;
 }
-.email{
-  text-align:center;
+
+.email {
+  text-align: center;
 }
-.contacts{
-  text-decoration:none;
+
+.contacts {
+  text-decoration: none;
 }
-footer{
-  text-align:center;
+
+footer {
+  text-align: center;
   font-size: 30px;
   font-family: 'Architects Daughter', cursive;
 }
 
 
-@media screen and (max-width:1025px){
-  .carousel-item{
-    max-height:400px;
-    max-width:400px;
+@media screen and (max-width:1025px) {
+  .carousel-item {
+    max-height: 400px;
+    max-width: 400px;
   }
 }
 
-@media screen and (max-width:700px){
-  .email{
-    font-size:20px;
+@media screen and (max-width:700px) {
+  .email {
+    font-size: 20px;
   }
-  .carousel{
-    height:400px;
-    padding:0px;
-  }
-  .carousel-item{
-  max-height:250px;
-  max-width:250px;
-  }
-}
-@media screen and (max-width:700px){
-  .email{
-    font-size:18px;
-  }
-}
-@media screen and (max-width:600px){
-  .fab{
-    margin:0px 0px 0px 220px;
-  }
-  .fas{
-    margin:0px 0px 0px 230px;
-  }
- }
 
-@media screen and (max-width:575px){
- #me{
-   margin:50px 20px 20px 30px;
- }
+  .carousel {
+    height: 400px;
+    padding: 0px;
+  }
+
+  .carousel-item {
+    max-height: 250px;
+    max-width: 250px;
+  }
 }
 
-@media screen and (max-width:450px){
-  #me{
-    margin:50px 20px 20px 0px;
+@media screen and (max-width:700px) {
+  .email {
+    font-size: 18px;
   }
- }
+}
+
+@media screen and (max-width:600px) {
+  .fab {
+    margin: 0px 0px 0px 220px;
+  }
+
+  .fas {
+    margin: 0px 0px 0px 230px;
+  }
+}
+
+@media screen and (max-width:575px) {
+  #me {
+    margin: 50px 20px 20px 30px;
+  }
+}
+
+@media screen and (max-width:450px) {
+  #me {
+    margin: 50px 20px 20px 0px;
+  }
+}
